--- a/Ender IO/Ender IO Display FE With Red Bar/assets/enderio/lang/en_us.lang
+++ b/Ender IO/Ender IO Display FE With Red Bar/assets/enderio/lang/en_us.lang
@@ -1,5 +1,6 @@
 #PARSE_ESCAPES
 
+#Ender IO Base
 enderio.power.symbol=FE
 enderio.power.format=%s FE
 enderio.power.format.of=%s / %s FE
@@ -10,6 +11,7 @@ enderio.top.rf.value.post=\u0020FE/t
 
 enderio.top.suffix.rf=\u0020FE
 
+#Ender IO Machines
 enderio.gui.stirling_generator.remaining=Remaining {0,number,percent}|{1,choice,0#|0<{1}m }{2,number}s|{3,number,#,###} FE
 
 tile.block_wired_charger.tooltip.detailed.line1=Charges items with FE
